# patricia_tree_net

./: CMakeLists.txt  README.md  ip_match.md  ip_match.txt  ipaddress.c  ptest.c  small.udp
1/: CMakeLists.txt  ipaddress.h  patricia.c  patricia.h  ptest.c
2/: demo.c  ipaddress.c  patricia.c  patricia.h
3/: CMakeLists.txt  demo.c  ipaddress.h  patricia.c  patricia.h
3rd/another/: CMakeLists.txt  ipaddress.c  ipaddress.h
4/: CMakeLists.txt  crt_dbg_leak.c  test.cc
4/patricia/: iterator.c  iterator.h  prefix.c  prefix.h  tree.c  tree.h
py/: nettrie.py  printer.py
src/: crt_dbg_leak.h  test.cc
src/patricia/: iterator.c  iterator.h  prefix.c  prefix.h  tree.c  tree.h
